--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,10 +76,10 @@ img{
 }
 
 /* 2nd column */
-#winning_number, #user_total{
-    font-size: 275px;
+.displayed_number{
+    font-size: 250px;
     text-align: center;
-    padding: 0 90px;
+    padding: 0 105px;
     position: absolute;
     top: 7%;
 }
