--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,11 @@ img{
     border-bottom: 1px solid black;
     height: 70px;
     /* margin: 65px 0;  */
+    
+}
+
+.scores_container{
+    font-size: 40px;
 }
 
 
